--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,7 +3,7 @@ project(marathon_cuda CUDA)
 
 set(CMAKE_CUDA_STANDARD 14)
 include_directories("./lib/Cimg" "./lib/glm")
-add_executable(marathon_cuda main.cu kernel.cu kernel.cuh)
+add_executable(marathon_cuda src/main.cu src/kernel.cu src/kernel.cuh)
 
 set_target_properties(
         marathon_cuda
