finished transferring, unchecked

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.17)
 project(marathon_cuda CUDA)
 
 set(CMAKE_CUDA_STANDARD 14)
-include_directories("./lib/Cimg" "./lib/glm" "./src/utils")
+include_directories("./lib/Cimg" "./lib/glm" "./src/utils" "./src")
 add_executable(marathon_cuda src/main.cu src/kernel.cu src/kernel.cuh src/utils/scene.hpp src/utils/camera.hpp)
 
 set_target_properties(
